# banana-classroom

./: .gitignore  Dockerfile  README.md  dependencies.py  pyproject.toml
.github/workflows/: aws_publish.yaml  banana_workflow.yaml
banana_classroom/: app.py  app_v2.py
banana_classroom/database/NOSQL/: banana_classroom.py
banana_classroom/frontend/: app.py
banana_classroom/frontend/routes/: get.py
banana_classroom/frontend/routes/signin/: get.py  page.py  post.py
banana_classroom/frontend/routes/signout/: delete.py
banana_classroom/frontend/routes/signup/: get.py  page.py  post.py
banana_classroom/frontend/templates/: 404.html  base.html  signin.html  signup.html
banana_classroom/frontend/templates/dashboard/: activities.html  classroom.html  profile.html  quiz.html  template.html
banana_classroom/frontend/templates/forms/: classroom_create.html  classroom_invite.html  quiz_create.html  quiz_invite.html
banana_classroom/frontend/templates/questions/: identification.html  multiple_choice.html  results.html
banana_classroom/service_v2/: app.py
banana_classroom/service_v2/classroom/create/: post.py
banana_classroom/services/user_service/: app.py
tests/: conftest.py  fixtures.py  test_qs_classroom_create.py  test_qs_classroom_student.py  test_qs_quiz.py  test_qs_quiz_result.py  test_qs_student.py  test_qs_updating_information.py  test_quiz_service.py  test_security.py  test_user_service.py
tests/service_v2/: conftest.py
tests/service_v2/database/: test_database.py
tests/service_v2/frontend/: test_frontend.py
(+62 files in other folders)
