[tool.poetry]
name = "banana-classroom"
version = "0.1.0"
description = ""
authors = ["Karl Robeck Alferez <karlalferezfx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pypox = ">=2.0.0"
dyntastic = "^0.14.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
mangum = "^0.17.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
uvicorn = "^0.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
