[tool.poetry]
name = "banana-classroom"
version = "0.1.0"
description = ""
authors = ["Karl Robeck Alferez <karlalferezfx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pypox = "2.2.1"
dyntastic = "^0.14.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
mangum = "^0.17.0"
jinja2 = "^3.1.3"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
granian = "^1.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
uvicorn = "^0.27.1"
faker = "^24.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
